sample/errors/sample_0d.nev

enum E { A { i : int; j : int; } }

func main() -> int
{
    let e = E::A(10, 10);

    if let ( E::A(i, i) = e)
    {
        0
    }
    else
    {
        1
    };
    
    0
}
